# web_asightment

./: README.md  forms.py  main.py  models.py  pyproject.toml
instance/: database.db
web/: acl.py  forms.py  init_database.py  main.py  models.py
web/static/: graphs_theme.css  theme.css
web/templates/: base.html  compare_cost.html  compare_graphs.html  contact.html  create_cost_of_living.html  create_province.html  index.html  login.html  register.html  show_graphs.html  sidebar.html  tags_view.html  view_compare_cost.html  view_province.html
